kubernetes/apps/external-services/docker-gpu.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app docker-gpu
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 192.168.25.4
  ports:
    - name: portainer
      port: 9443
      protocol: TCP
      targetPort: 9443
    - name: go2rtc
      port: 1984
      protocol: TCP
      targetPort: 1984
    - name: scrypted
      port: 10443
      protocol: TCP
      targetPort: 10443
    - name: plex
      port: 32400
      protocol: TCP
      targetPort: 32400
    - name: pterodactyl-wings
      port: 443
      protocol: TCP
      targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-gpu-https
  namespace: external-services
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal
  rules:
    - host: &host portainer.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-gpu
                port:
                  number: 9443
    - host: &hosted scrypted.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-gpu
                port:
                  number: 10443
  tls:
    - hosts:
        - *host
        - *hosted
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app docker-gpu-http
  namespace: external-services
spec:
  ingressClassName: internal
  rules:
    - host: &host go2rtc.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-gpu
                port:
                  number: 1984
    - host: &plex plex.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-gpu
                port:
                  number: 32400
  tls:
    - hosts:
        - *host
        - *plex
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pterodactyl-wings
  namespace: external-services
  annotations:
    external-dns.alpha.kubernetes.io/target: external.davidhome.ro
  labels:
    app.kubernetes.io/name: pterodactyl-wings
    app.kubernetes.io/instance: pterodactyl-wings
spec:
  ingressClassName: external
  rules:
    - host: &host wings.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gpu-docker
                port:
                  number: 443
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Service
metadata:
  name: davidapps-smp
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 192.168.25.4
  ports:
    - name: apiuber
      port: &port 4567
      protocol: TCP
      targetPort: *port
    - name: dynmap
      port: &port 8123
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: davidapps-smp
  namespace: external-services
  annotations:
    external-dns.alpha.kubernetes.io/target: external.davidhome.ro
  labels:
    app.kubernetes.io/name: davidapps-smp
    app.kubernetes.io/instance: davidapps-smp
spec:
  ingressClassName: external
  rules:
    - host: &host uberapi.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: davidapps-smp
                port:
                  number: 4567
    - host: &map map.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: davidapps-smp
                port:
                  number: 8123
  tls:
    - hosts:
        - *host
        - *map
