kubernetes/apps/external-services/gpu-docker.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app gpu-docker
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 192.168.25.4
  ports:
    - name: portainer
      port: 9443
      protocol: TCP
      targetPort: 9443
    - name: go2rtc
      port: 1984
      protocol: TCP
      targetPort: 1984
    - name: scrypted
      port: 10443
      protocol: TCP
      targetPort: 10443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app portainer
  namespace: external-services
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal
  rules:
    - host: &host portainer.davidapps.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 9443
  tls:
    - hosts:
        - *host
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app portainer-services
  namespace: external-services
spec:
  ingressClassName: internal
  rules:
    - host: &host go2rtc.davidapps.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go2rtc
                port:
                  number: 1984
    - host: &hosted scrypted.davidapps.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go2rtc
                port:
                  number: 10443
  tls:
    - hosts:
        - *host
        - *hosted
