kubernetes/apps/external-services/grafana.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app grafana
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 192.168.100.18
  ports:
    - name: grafana
      port: 3000
      protocol: TCP
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app grafana
  namespace: external-services
  annotations:
    external-dns.alpha.kubernetes.io/target: external.davidhome.ro
spec:
  ingressClassName: external
  rules:
    - host: &host monitoring.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
  tls:
    - hosts:
        - *host
