kubernetes/apps/external-services/idrac.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app idrac-nucleus
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 192.168.100.13
  ports:
    - name: http
      port: &port 443
      protocol: TCP
      targetPort: *port
---
apiVersion: v1
kind: Service
metadata:
  name: &app idrac-electron
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 192.168.100.14
  ports:
    - name: http
      port: &port 443
      protocol: TCP
      targetPort: *port
---
apiVersion: v1
kind: Service
metadata:
  name: &app idrac-proton
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 192.168.100.15
  ports:
    - name: http
      port: &port 443
      protocol: TCP
      targetPort: *port
---
apiVersion: v1
kind: Service
metadata:
  name: &app idrac-neutron
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 192.168.100.16
  ports:
    - name: http
      port: &port 443
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idrac-ingress
  namespace: external-services
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal
  rules:
    - host: &host nucleus.idrac.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idrac-nucleus
                port:
                  number: 443
    - host: &host1 electron.idrac.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idrac-electron
                port:
                  number: 443
    - host: &host2 proton.idrac.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idrac-proton
                port:
                  number: 443
    - host: &host3 neutron.idrac.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idrac-neutron
                port:
                  number: 443
  tls:
    - hosts: [*host, *host1, *host2, *host3]
---
