kubernetes/apps/external-services/monitoring.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app monitoring
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 192.168.100.145
  ports:
    - name: sentry
      port: 9000
      protocol: TCP
      targetPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app monitoring
  namespace: external-services
  annotations:
    external-dns.alpha.kubernetes.io/target: external.davidapps.dev
spec:
  ingressClassName: external
  rules:
    - host: &host sentry.davidapps.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sentry
                port:
                  number: 9000
  tls:
    - hosts:
        - *host
