kubernetes/apps/external-services/pihole.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app pihole
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pihole
  namespace: external-services
  labels:
    kubernetes.io/service-name: pihole
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "192.168.100.20"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: external-services
spec:
  ingressClassName: internal
  rules:
    - host: &host pihole.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80
  tls:
    - hosts: [*host]
