kubernetes/apps/external-services/proxmox-nucleus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app proxmox-nucleus
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8006
      targetPort: 8006
    - name: proxmenux
      protocol: TCP
      port: 8008
      targetPort: 8008
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: proxmox-nucleus
  namespace: external-services
  labels:
    kubernetes.io/service-name: proxmox-nucleus
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8006
  - name: proxmenux
    appProtocol: http
    protocol: TCP
    port: 8008
endpoints:
  - addresses:
      - "192.168.100.56"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox-nucleus
  namespace: external-services
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-name: nucleus.davidapps.local
    nginx.ingress.kubernetes.io/proxy-ssl-secret: external-services/proxmox-nucleus-ca
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: "on"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"
    nginx.ingress.kubernetes.io/proxy-ssl-verify-depth: "1"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Hardware
    gethomepage.dev/name: Proxmox
    gethomepage.dev/icon: proxmox.png
    gethomepage.dev/description: Virtualization
    gethomepage.dev/pod-selector: ""
    gatus.home-operations.com/endpoint: |-
      name: Proxmox
      group: Hardware
      url: https://nucleus.davidhome.ro
      interval: 1m
      conditions: ["[STATUS] == any(200, 302, 301)"]
spec:
  ingressClassName: internal
  rules:
    - host: &host nucleus.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxmox-nucleus
                port:
                  number: 8006
  tls:
    - hosts: [*host]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmoxmenux-nucleus
  namespace: external-services
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Hardware
    gethomepage.dev/name: Proxmox Menux
    gethomepage.dev/icon: proxmox.png
    gethomepage.dev/description: Proxmox Menux Interface
    gethomepage.dev/pod-selector: ""
    gatus.home-operations.com/endpoint: |-
      name: Proxmox Menux
      group: Hardware
      url: https://nucleus-menux.davidhome.ro
      interval: 1m
      conditions: ["[STATUS] == any(200, 302, 301)"]
spec:
  ingressClassName: internal
  rules:
    - host: &host nucleus-menux.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxmox-nucleus
                port:
                  number: 8008
  tls:
    - hosts: [*host]
