kubernetes/apps/external-services/truenas.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app truenas
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 192.168.25.3
  ports:
    - name: http
      port: &port 80
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas
  namespace: external-services
spec:
  ingressClassName: internal
  rules:
    - host: &host truenas.davidapps.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas
                port:
                  number: 80
  tls:
    - hosts: [*host]
