kubernetes/apps/external-services/unifi.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app unifi
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: http
      protocol: TCP
      port: &port 443
      targetPort: *port
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: unifi
  namespace: external-services
  labels:
    kubernetes.io/service-name: unifi
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - "192.168.10.1"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app unifi
  namespace: external-services
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: Unifi Controller
    gethomepage.dev/icon: unifi.png
    gethomepage.dev/description: Network Controller
    gatus.home-operations.com/endpoint: |-
      name: Unifi Controller
      group: Infrastructure
      url: https://unifi.davidhome.ro
      interval: 1m
      client:
        insecure: true
      conditions: ["[STATUS] == any(200, 302, 301)"]
spec:
  ingressClassName: internal
  rules:
    - host: &host unifi.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  number: 443
  tls:
    - hosts:
        - *host
